--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -2,3 +2,23 @@
     margin-left: auto;
     margin-right: var(--lumo-space-m);
 }
+
+.list-view .content {
+    display: flex;
+}
+
+.list-view .grid {
+    flex: 2;
+}
+
+.list-view .form {
+    flex: 1;
+    padding: var(--lumo-space-m);
+}
+
+@media all and (max-width: 1100px) {
+    .list-view.editing .toolbar,
+    .list-view.editing .grid {
+        display: none;
+    }
+}
